# zk

./: .gitignore  README.md  setup.sh
circuits/compliance_check/: Nargo.toml
circuits/compliance_check/src/: main.nr
contracts/horizon_pool/: Cargo.toml
contracts/horizon_pool/src/: lib.rs  test.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ComplianceSwapDashboard.tsx
