[package]
name = "horizon_pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.1.0" }
ultrahonk_soroban_verifier = { path = "../../lib/rs-soroban-ultrahonk/crates/ultrahonk-soroban-verifier" }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
